--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
         android:theme="@style/Theme.AppCompat.Light">
         <activity
             android:name=".ShootingActivity"
-
-        android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -41,5 +40,4 @@
     </application>
 
 </manifest>
-
-    <!--android:screenOrientation="portrait"-->
+    <!--android:configChanges="orientation|screenSize|keyboardHidden"-->
